[tool.poetry]
name = "infrareuse"
version = "0.1.0"
description = ""
authors = ["skleppinger <s.kleppinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
pytest = "^8.3.3"
mypy = "^1.13.0"
typer = "^0.12.5"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
